--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -1,20 +1,35 @@
 .welcome-page {
-  padding-top: 2rem;
-}
-
-h1 {
-  margin-top: 1rem;
-  font-size: 1.5rem;
+  background-color: #335c8c;
+  color: #fff;
+  padding: 3.5rem 15px 0;
   text-align: center;
 }
 
-.welcome-page button {
-  margin-top: 2rem;
+.welcome-page .header-image {
+  background-color: #9ec8ee;
+  border-radius: 50%;
+  padding: 10px;
+  width: 75px;
+}
+
+h1 {
+  margin-top: -0.75rem;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.welcome-page .login-button {
+  margin: 2rem 0 1rem;
+  width: 100%;
+}
+
+.welcome-page .message {
+  font-size: 16px;
 }
 
 .welcome-page .dataset {
-  margin: 1rem 0;
-  border: 1px solid #000;
-  padding: 3px;
-  border-radius: 5px;
+  margin: 0.5rem 0 2rem;
+  background-color: #fff;
+  text-align: left;
+  color: #000;
 }
