--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,42 @@ body {
   width: 15px;
   height: 15px;
 }
+
+.list-info {
+  background-color: #f7f7f7;
+  padding: 5px 15px;
+  color: #9d9d9d;
+}
+
+.sort-dropdown button.btn {
+  border: none;
+  box-shadow: none;
+  padding: 0;
+  line-height: 1;
+  height: auto;
+  font-size: 16px;
+  color: #9d9d9d;
+}
+
+.sort-dropdown .dropdown li {
+  position: relative;
+}
+
+.sort-dropdown .dropdown li .svg-icon {
+  visibility: hidden;
+  vertical-align: text-top;
+  margin-right: 0.25rem;
+}
+
+.sort-dropdown .dropdown li.active a {
+  background-color: #fff;
+  color: #333d49;
+}
+
+.sort-dropdown .dropdown li.active .svg-icon {
+  visibility: visible;
+}
+
+.sort-dropdown .dropdown li a {
+  padding-left: 1rem;
+}
