--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,26 @@ body {
 .modal form button {
   width: 47%;
 }
+
+.loader-icon {
+  font-size: 0.5rem;
+  text-indent: -9999rem;
+  border-top: 0.125rem solid rgba(0, 0, 0, 0.1);
+  border-right: 0.125rem solid rgba(0, 0, 0, 0.1);
+  border-bottom: 0.125rem solid rgba(0, 0, 0, 0.1);
+  border-left: 0.125rem solid #5DC0DE;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1s infinite linear;
+  animation: load8 1s infinite linear;
+}
+
+.loader-icon,
+.loader-icon:after {
+  border-radius: 1rem;
+  z-index: 6;
+  display: block;
+  width: 1.25rem;
+  height: 1.25rem;
+}
