--- a/src/components/BindingsPage.css
+++ b/src/components/BindingsPage.css
@@ -50,15 +50,11 @@
   box-shadow: none;
   padding: 0 1.5rem;
   height: 2rem;
+  color: #4376b2;
 }
 
 .bindings-page .section-header .button-group button:disabled {
   background-color: transparent;
-}
-
-.bindings-page .section-header .button-group button .glyphicon {
-  float: none;
-  font-size: 0.75rem;
 }
 
 .bindings-page .section-header .button-group button:first-child {
@@ -77,4 +73,29 @@
   text-overflow: ellipsis;
   display: block;
   white-space: nowrap;
+}
+
+.bindings-page button .svg-icon {
+  vertical-align: middle;
+  margin-right: 0.25rem;
+}
+
+.bindings-page button .svg-icon .add-icon {
+  width: 14px;
+}
+
+.bindings-page button .svg-icon .fill {
+  fill:#4376b2;
+}
+.bindings-page button .svg-icon .stroke {
+  stroke:#4376b2;
+}
+
+.bindings-page button.syncing-button {
+  color: #8c9caf;
+}
+.bindings-page button .loader-icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.5rem;
 }
