--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -21,13 +21,12 @@
   color: #fff;
   padding: 3.5rem 15px 0;
   text-align: center;
+  font-weight: 300;
 }
 
-.welcome-page .header-image {
-  background-color: #9ec8ee;
-  border-radius: 50%;
-  padding: 10px;
-  width: 75px;
+.welcome-page .logo-stacked {
+  width: 75%;
+  margin-bottom: 2rem;
 }
 
 h1 {
@@ -42,7 +41,7 @@ h1 {
 }
 
 .welcome-page .message {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .welcome-page .dataset {
