--- a/src/components/LoginHeader.css
+++ b/src/components/LoginHeader.css
@@ -25,17 +25,8 @@
   padding: 5px 10px;
 }
 
-.login-header .title {
-  font-size: 18px;
-}
-
-.login-header img {
+.login-header .logo-full {
   height: 40px;
-  width: 40px;
-  background-color: #9ec8ee;
-  border-radius: 50%;
-  padding-top: 3px;
-  margin-right: 10px;
 }
 
 .login-header .dropdown {
