--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -29,6 +29,11 @@
   margin-bottom: 2rem;
 }
 
+.welcome-page .description p {
+  margin: 0 0 2rem;
+  line-height: 1.3;
+}
+
 h1 {
   margin-top: -0.75rem;
   font-size: 2.5rem;
