Add a loading state to the datasets view

--- a/src/components/DatasetsView.css
+++ b/src/components/DatasetsView.css
@@ -32,3 +32,11 @@
   font-size: 18px;
   font-weight: 700;
 }
+
+.datasets-view .loaderoverlay {
+  position: inherit;
+  top: initial;
+  bottom: initial;
+  left: initial;
+  right: initial;
+}
