--- a/src/components/LoadingAnimation.css
+++ b/src/components/LoadingAnimation.css
@@ -31,9 +31,14 @@
 .loader::after {
   border-radius: 50%;
   z-index: 6;
+  overflow: hidden;
+}
+
+.loader-center {
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .loaderoverlay {
@@ -51,7 +56,7 @@
 .loader::after {
   width: 4rem;
   height: 4rem;
-  margin: -2rem 0 0 -2rem;
+  margin-left: 2rem;
 }
 
 @keyframes load8 {
