--- a/src/components/BindingsPage.css
+++ b/src/components/BindingsPage.css
@@ -43,7 +43,7 @@
 
 .bindings-page .default.bottom-button {
   color: #8c9caf;
-  box-shadow: inset 0 0 0 1px #8c9caf, inset 0 1px rgba(255,255,255,.875);
+  box-shadow: inset 0 0 0 1px #8c9caf, inset 0 1px rgba(255, 255, 255, 0.875);
 }
 
 .bindings-page .no-datasets {
@@ -108,10 +108,10 @@
 }
 
 .bindings-page button .svg-icon .fill {
-  fill:#4376b2;
+  fill: #4376b2;
 }
 .bindings-page button .svg-icon .stroke {
-  stroke:#4376b2;
+  stroke: #4376b2;
 }
 
 .bindings-page button.syncing-button {
