--- a/src/components/BindingsPage.css
+++ b/src/components/BindingsPage.css
@@ -62,13 +62,51 @@
   border-top: 1px solid #dfe3e9;
 }
 
+.bindings-page .section-header .title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.bindings-page .section-header .link {
+  color: #4376b2;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.bindings-page .section-header .title .link {
+  display: flex;
+}
+
+.bindings-page svg.angle-left-icon .stroke {
+  fill: #4376b2;
+}
+
+.bindings-page .section-header .button-link {
+  font-size: 14px;
+}
+
+.bindings-page .section-header .title .dropdown {
+  display: flex;
+}
+
+.bindings-page .section-header .title .dataset-title {
+  font-weight:  bold;
+  line-height: 2em;
+}
+
+.bindings-page .section-header .button-group {
+  display: flex;
+  justify-content: space-between;
+}
+
 .bindings-page .section-header .button-group button {
-  width: 50%;
   border: none;
   box-shadow: none;
-  padding: 0 1.5rem;
+  padding: 0 10px;
   height: 2rem;
   color: #4376b2;
+  font-size: 14px;
 }
 
 .bindings-page .section-header .button-group button .badge {
@@ -79,12 +117,9 @@
   background-color: transparent;
 }
 
-.bindings-page .section-header .button-group button:first-child {
+.bindings-page .section-header .button-group button:nth-child(even) {
   border-right: 1px solid #dfe3e9;
-}
-
-.bindings-page .dataset-link {
-  margin-bottom: 1rem;
+  border-left: 1px solid #dfe3e9;
 }
 
 .bindings-page .section-header a {
