--- a/src/components/BindingListItem.css
+++ b/src/components/BindingListItem.css
@@ -94,10 +94,16 @@
   height: 1rem;
 }
 
-.file .loader-icon {
-  justify-self: flex-end;
+.file .loader-icon-container {
+  display: flex;
+  align-items: center;
   margin-left: auto;
-  margin-right: 0.375rem;
+  border: 1px solid #cbcbcb;
+  border-radius: 50%;
+}
+
+.file .loader-icon {
+  margin: 0.313rem;
 }
 
 .file .link-button {
