[#43] Revisions to link datasets view (#48)
* [#43] Revisions to link datasets view

* [#43] Make cursor a pointer on dataset hover

--- a/src/components/DatasetItem.css
+++ b/src/components/DatasetItem.css
@@ -24,6 +24,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  cursor: pointer;
 }
 
 .dataset .center-info {
@@ -49,7 +50,11 @@
   text-overflow: ellipsis;
 }
 
-.dataset button, .dataset a.btn {
+.link-icon {
   justify-self: flex-end;
   margin-left: auto;
+}
+
+.link-icon .stroke {
+  fill: #c1c1c1;
 }
