[#42] Allow users to select a sheet (#50)
* [#42] Allow user to select sheet

* [#44] Remove the need for duplicate function call

* [#42] Fix failing tests

* [#42] Bind all rows on sheet selection

* [#42] Update warning modal text

* [#42] Fix nameditem error

* [#42] Make each namedItem unique

* [#42] Stop using file name for namedItem's name

* [#42] Remove empty rows and columns before file upload

* [#42] Show sheet number when entire sheet is selected

* [#42] Update displayed binding range text

* [#42] Select non sheet ranges when editing

* [#42] Use current binding to check radio boxes

* [#42] Show bound sheet when editing sheet binding

* [#42] Fix failing tests

--- a/src/components/AddDataModal.css
+++ b/src/components/AddDataModal.css
@@ -19,3 +19,60 @@
 .add-data-modal {
   top: 50px;
 }
+
+.selection {
+  display: flex;
+  border: 1px solid #a3afbf;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.selection span {
+  margin: 0;
+  padding-left: 6px;
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+}
+
+.selection span::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border-radius: 1em;
+  border: 1px solid white;
+  box-shadow: 0 0 0 0.05em grey;
+  margin-right: 0.75em;
+}
+
+.selection input[type=radio] {
+  display: none;
+}
+
+.selection input[type=radio]:checked + span::before {
+  border: 4.5px solid #328df3;
+  background: white;
+  box-shadow: 0 0 0 0.05em grey;
+}
+
+.selection .radio-button {
+  display: flex;
+  padding: 12px;
+  align-items: center;
+}
+
+.selection .selection-info {
+  display: flex;
+  padding: 12px;
+  color: #969696;
+  font-size: 11px;
+}
+
+.select-sheet {
+  background-color: aliceblue;
+}
+
+.full-screen-modal .center-block .selection-form {
+  padding: 0;
+}
