[#54] Fix check mark styling on IE

--- a/src/components/BindingListItem.css
+++ b/src/components/BindingListItem.css
@@ -109,6 +109,7 @@
 .file .link-button {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 2rem;
   padding: 0;
   border: 1px solid #5ab962;
