--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -17,8 +17,8 @@
  * data.world, Inc. (http://data.world/).
  */
 .insight-chart {
-    max-width: 100%;
-    max-height: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: 30px;
+  cursor: pointer;
 }
