--- a/src/components/UploadInsight.css
+++ b/src/components/UploadInsight.css
@@ -16,34 +16,43 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
- .insights {
-   background-color: white;
- }
- 
-.insight-header {
-  padding: 15px;
+ .insight-upload {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+ .insight-selected {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 30px 0;
 }
 
-.insight-title {
-  font-size: 18px;
-  font-weight: 700;
+.input-group {
+  width: 100%;
 }
 
-.close-button {
-  float: right;
-  cursor: pointer;
+.insight-label {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.insight-sub-header {
-  padding: 5px 15px;
-  background-color: #dfe3e9;
+.info {
+ float: right;
+ font-weight: normal;
+ color: gray;
+ font-size: 12px;
 }
 
-.insight-sub-title {
-  color: gray;
+
+.insight-upload-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin: 35px 0;
 }
 
-.insight-charts {
-  width: 80%;
-  margin: 0 auto;
+.insight-upload-button {
+  width: 47%;
 }
