--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -16,6 +16,12 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
+ .charts-container {
+   height: 100vh;
+   margin: 0;
+   background-color: white;
+ }
+
 .insight-chart {
   max-width: 100%;
   max-height: 100%;
