--- a/src/components/Published.css
+++ b/src/components/Published.css
@@ -16,3 +16,26 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
+.published-container {
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 50%;
+}
+
+.published-title {
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+.published-chart {
+  margin: 0;
+  padding-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.published-button {
+  margin-top: 25px;
+  width: 100%;
+}
