--- a/src/components/UploadInsight.css
+++ b/src/components/UploadInsight.css
@@ -32,7 +32,7 @@
     margin: 30px 0;
 }
 
-.input-group {
+.input-group, .dropdown, .dropdown-menu {
   width: 100%;
 }
 
@@ -60,4 +60,22 @@
 
 .insight-upload-button {
   width: 47%;
+}
+
+.dropdown-toggle {
+  box-shadow: none;
+  border-color: #6290c3;
+}
+
+.projects {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #5d6f85;
+  padding-left: 12px;
+  padding-right: 12px;
+  box-shadow: none;
+  border: 1px solid #a3afbf;
+  border-radius: 0;
 }
