Make header background colour dynamic

--- a/src/components/Insights.css
+++ b/src/components/Insights.css
@@ -16,7 +16,7 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
- .insights {
+ .insights-container {
    background-color: white;
    overflow: scroll;
  }
