--- a/src/components/NoChart.css
+++ b/src/components/NoChart.css
@@ -17,7 +17,7 @@
  * data.world, Inc. (http://data.world/).
  */
 .no-chart {
-  margin: 0 20px;
+  margin: 0 auto;
   padding-top: 50%;
   font-weight: 700;
   text-align: center;
