--- a/src/components/Published.css
+++ b/src/components/Published.css
@@ -17,7 +17,7 @@
  * data.world, Inc. (http://data.world/).
  */
 .published-container {
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
   padding-top: 50%;
 }
@@ -44,15 +44,17 @@
 
 .published-link {
   color: white;
+  width: 45%;
 }
 
 .published-back-button {
-  width: 50%;
+  width: 45%;
   padding: 0;
-  font-size: 12px;
+  font-size: 14px;
 }
 
-.pulbished-link-button {
+.published-link-button {
   width: 100%;
-  float: right;
+  font-size: 14px;
+  padding: 0;
 }
