Upload charts to data.world as insights (#62)
* Add ribbon button

* Display insights page

* Add insights header

* Add sub-header

* Display charts

* Create upload form

* Add published page

* Add no chart page

* Add loading animation

* Implement cancel button on upload page

* Complete published page

* Reduce insights page loading time

* Pass user and projects to upload page

* Upload

* Add refresh button

* Add projects dropdown

* URI encode title

* Fix inconsistent bg color on long chart lists

* Validate title field

* Load charts from all sheets

* Update wording of no chart page

* Code cleanup

* Fix bug with anchor tags

* Display contributing projects

[BUG] Cannot upload to contributing projects

* Add snapshot tests

* Display projects which the user has write rights

* Display start page when user not logged in

* Only load projects if user is logged in

* Enable user to Create project

 * Create no project page
 * Add create project modal
 * Add create project form
 * Implement header
 * Implement project name field
 * Implement project objective field
 * Implement privacy radio buttons
 * Implement project form buttons
 * Hook up to API
 * Update tests

* Update ribbon buttons

* Add import data ribbon button

* Add ImportData component

* Style import page

* Make header background colour dynamic

* Text changes

* Add back button on published page

* Updates to published page

* Add refresh button to charts view

* Prepopulate title field

* Update snapshots

* Display correct chart title

* Fix download query link

* Update form text and validation

* Scroll to top when Published page loads

* Reduced flickering as page loads

* Use OAuth state to redirect user to correct page

* Make header styling consistent

* Fine tune button styling

* Update snapshots

* Address PR comments

* Display error for non loaded charts

* Impl

--- a/src/components/Published.css
+++ b/src/components/Published.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 data.world, Inc.
+ * Copyright 2018 data.world, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,42 +16,41 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.login-header {
-  background-color: #335c8c;
-  height: 50px;
-  color: #fff;
+.published-container {
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 30%;
+}
+
+.published-title {
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+.published-chart {
+  margin: 0;
+  padding-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.published-buttons {
   display: flex;
   align-items: center;
-  padding: 5px 10px;
+  justify-content: space-between;
+  margin-top: 25px;
 }
 
-.login-header .dw-logo {
-  height: 40px;
+.published-link {
+  color: white;
+  width: 47.25%;
 }
 
-.login-header .dropdown {
-  margin-left: auto;
+.published-back-button {
+  width: 47.25%;
 }
 
-.login-header .dropdown.btn-group button {
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  line-height: 1;
-  height: auto;
-  font-size: 16px;
-  color: #fff !important;
-  background-image: none;
-}
-
-.login-header .dropdown-menu {
-  z-index: 1060;
-}
-
-.insights {
-  background-color: #8671ad
-}
-
-.import {
-  background-color: #43984c;
+.published-link-button {
+  width: 100%;
 }
