--- a/src/components/Charts.css
+++ b/src/components/Charts.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 data.world, Inc.
+ * Copyright 2018 data.world, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,42 +16,34 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.login-header {
-  background-color: #335c8c;
-  height: 50px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  padding: 5px 10px;
+ .charts-container {
+  height: 100vh;
+  margin: 0;
+  background-color: white;
 }
 
-.login-header .dw-logo {
-  height: 40px;
+ .container {
+  width: 100%;
 }
 
-.login-header .dropdown {
-  margin-left: auto;
+.insight-sub-header {
+  background-color: #F6F5F7;
+  padding: 5px 15px;
+  color: #9d9d9d;
 }
 
-.login-header .dropdown.btn-group button {
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  line-height: 1;
-  height: auto;
-  font-size: 16px;
-  color: #fff !important;
-  background-image: none;
+.insight-button-container {
+  text-align: center;
+  margin: 0 15px;
+  margin-bottom: 20px;
 }
 
-.login-header .dropdown-menu {
-  z-index: 1060;
+.insight-button-container .refresh-button{
+  width: 100%
 }
 
-.insights {
-  background-color: #8671ad
-}
-
-.import {
-  background-color: #43984c;
+.charts-failed {
+  margin: 0 15px;
+  margin-bottom: 15px;
+  font-size: 13px;
 }
