--- a/src/components/CreateProjectModal.css
+++ b/src/components/CreateProjectModal.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 data.world, Inc.
+ * Copyright 2018 data.world, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,42 +16,40 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.login-header {
-  background-color: #335c8c;
-  height: 50px;
-  color: #fff;
+ .create-project-modal {
+  position: absolute;
+  top: 50px;
+ }
+
+ .create-project-form {
+  padding: 15px;
+ }
+
+ .create-project-modal .control-label {
+  width: 100%;
   display: flex;
   align-items: center;
-  padding: 5px 10px;
-}
+  justify-content: space-between;
+ }
 
-.login-header .dw-logo {
-  height: 40px;
-}
+ .project-form-info {
+   font-size: .8125rem;
+   font-weight: normal;
+   color: #5d6f85;
+ }
 
-.login-header .dropdown {
-  margin-left: auto;
-}
+  .create-project-modal .radio-option-description {
+    color: #5d6f85;
+  }
 
-.login-header .dropdown.btn-group button {
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  line-height: 1;
-  height: auto;
-  font-size: 16px;
-  color: #fff !important;
-  background-image: none;
-}
+  .create-project-modal .radio:first-child {
+    margin-bottom: 1rem;
+  }
 
-.login-header .dropdown-menu {
-  z-index: 1060;
-}
+  .create-project-modal .radio .radio-label {
+    color: #8c9cb0;
+  }
 
-.insights {
-  background-color: #8671ad
-}
-
-.import {
-  background-color: #43984c;
-}
+  .create-project-modal .radio.checked .radio-label {
+    color: #608fc5;
+  }
