--- a/src/components/ImportData.css
+++ b/src/components/ImportData.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 data.world, Inc.
+ * Copyright 2018 data.world, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,42 +16,33 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.login-header {
-  background-color: #335c8c;
-  height: 50px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  padding: 5px 10px;
-}
-
-.login-header .dw-logo {
-  height: 40px;
-}
-
-.login-header .dropdown {
-  margin-left: auto;
-}
-
-.login-header .dropdown.btn-group button {
-  border: none;
-  box-shadow: none;
+.import-container {
   padding: 0;
-  line-height: 1;
-  height: auto;
-  font-size: 16px;
-  color: #fff !important;
-  background-image: none;
+  padding-top: 30px;
+  height: 100vh;
 }
 
-.login-header .dropdown-menu {
-  z-index: 1060;
+.import-image {
+  width: 100%;
+  margin: 20px 0;
 }
 
-.insights {
-  background-color: #8671ad
+.import-text {
+  text-align: center;
 }
 
-.import {
-  background-color: #43984c;
+.import-text-header {
+  font-weight: bold;
+}
+
+.import-text-body {
+  font-size: 13px;
+}
+
+.import-link {
+  margin: 0 20px;
+}
+
+.import-button {
+  width: 90%;
 }
