--- a/src/components/Insights.css
+++ b/src/components/Insights.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 data.world, Inc.
+ * Copyright 2018 data.world, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,42 +16,27 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.login-header {
-  background-color: #335c8c;
-  height: 50px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  padding: 5px 10px;
+ .insights-container {
+   background-color: white;
+   overflow: scroll;
+ }
+ 
+.insight-header {
+  padding: 15px;
 }
 
-.login-header .dw-logo {
-  height: 40px;
+.insight-title {
+  font-size: 18px;
+  font-weight: 700;
 }
 
-.login-header .dropdown {
-  margin-left: auto;
+.close-button {
+  float: right;
+  cursor: pointer;
 }
 
-.login-header .dropdown.btn-group button {
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  line-height: 1;
-  height: auto;
-  font-size: 16px;
-  color: #fff !important;
-  background-image: none;
-}
-
-.login-header .dropdown-menu {
-  z-index: 1060;
-}
-
-.insights {
-  background-color: #8671ad
-}
-
-.import {
-  background-color: #43984c;
+.insight-charts {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
