--- a/src/components/LoginHeader.css
+++ b/src/components/LoginHeader.css
@@ -25,7 +25,7 @@
   padding: 5px 10px;
 }
 
-.login-header .dw-logo {
+.login-header .logo-full {
   height: 40px;
 }
 
@@ -46,12 +46,4 @@
 
 .login-header .dropdown-menu {
   z-index: 1060;
-}
-
-.insights {
-  background-color: #8671ad
-}
-
-.import {
-  background-color: #43984c;
 }
