Reintroduce former landing page

--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -17,7 +17,7 @@
  * data.world, Inc. (http://data.world/).
  */
 .welcome-page {
-  background-color: #5d6f83;
+  background-color: #335c8c;
   height: 100vh;
   overflow: scroll;
   color: #fff;
