--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -18,10 +18,16 @@
  */
 .welcome-page {
   background-color: #335c8c;
+  height: 100vh;
+  overflow: scroll;
   color: #fff;
   padding: 3.5rem 15px 0;
   text-align: center;
   font-weight: 300;
+}
+
+.welcome-page-v2 {
+  background-color: #5d6f83;
 }
 
 .welcome-page .logo-stacked {
@@ -54,4 +60,24 @@ h1 {
   background-color: #fff;
   text-align: left;
   color: #000;
+}
+
+.welcome-page .feature {
+  text-align: left;
+  margin-bottom: 1.4rem;
+}
+
+.welcome-page .feature-icon {
+  width: 40px;
+  height: 40px;
+  margin: 0 15px;
+}
+
+.welcome-page .feature-text {
+  display: inline;
+  margin: 0;
+}
+
+.welcome-page .sign-up-link {
+  color: #5dc0de;
 }
